--- a/kata_code_smell/pom.xml
+++ b/kata_code_smell/pom.xml
@@ -5,12 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>LPRO_DQL</groupId>
-	<artifactId>exercice_2</artifactId>
+	<artifactId>exercice_mutation_testing</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>3.12.1</maven.compiler.source>
-		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+		<maven.compiler.target>3.12.1</maven.compiler.target>
+		<maven.compiler.release>21</maven.compiler.release>
 		<assertj.version>3.25.3</assertj.version>
 		<pitest.version>1.15.8</pitest.version>
 	</properties>
@@ -46,11 +47,6 @@
 			<scope>test</scope>
 		</dependency>
 
-			<dependency>
-				<groupId>io.vavr</groupId>
-				<artifactId>vavr</artifactId>
-				<version>0.10.4</version>
-			</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -67,6 +63,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.source}</version>
 				<configuration>
+					<release>17</release>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.source}</target>
 <!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
