--- a/kata_code_smell/pom.xml
+++ b/kata_code_smell/pom.xml
@@ -11,7 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>3.12.1</maven.compiler.source>
 		<maven.compiler.target>3.12.1</maven.compiler.target>
-		<maven.compiler.release>21</maven.compiler.release>
+		<maven.compiler.release>17</maven.compiler.release>
 		<assertj.version>3.25.3</assertj.version>
 		<pitest.version>1.15.8</pitest.version>
 	</properties>
@@ -21,7 +21,7 @@
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>5.7.2</version>
+				<version>5.10.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -92,6 +92,13 @@
 						<groupId>org.pitest</groupId>
 						<artifactId>pitest-maven</artifactId>
 						<version>${pitest.version}</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.pitest</groupId>
+								<artifactId>pitest-junit5-plugin</artifactId>
+								<version>1.2.1</version>
+							</dependency>
+						</dependencies>
 						<executions>
 							<execution>
 								<id>pitest</id>
