--- a/kata_code_smell/pom.xml
+++ b/kata_code_smell/pom.xml
@@ -116,9 +116,9 @@
 <!--								<param>LPRO_DQL.*</param>-->
 <!--							</targetTests>-->
 							<mutators>
-<!--								<mutator>DEFAULTS</mutator>-->
-								<mutator>STRONGER</mutator>
-								<!--<mutator>ALL</mutator>-->
+<!--								<mutator>ALL</mutator>-->
+								<mutator>DEFAULTS</mutator>
+								<!--<mutator>STRONGER</mutator>-->
 							</mutators>
 <!--							<skipTests>${skipTests}</skipTests>-->
 
