apparition mutant VOID CALL

--- a/kata_code_smell/pom.xml
+++ b/kata_code_smell/pom.xml
@@ -117,8 +117,8 @@
 <!--							</targetTests>-->
 							<mutators>
 <!--								<mutator>ALL</mutator>-->
-								<mutator>DEFAULTS</mutator>
-								<!--<mutator>STRONGER</mutator>-->
+								<mutator>STRONGER</mutator>
+								<!--<mutator></mutator>DEFAULTS-->
 							</mutators>
 <!--							<skipTests>${skipTests}</skipTests>-->
 
