forcer l'ajout d'un test à la limite de la condition

--- a/kata_code_smell/pom.xml
+++ b/kata_code_smell/pom.xml
@@ -116,8 +116,8 @@
 <!--								<param>LPRO_DQL.*</param>-->
 <!--							</targetTests>-->
 							<mutators>
-<!--								<mutator>ALL</mutator>-->
-								<mutator>STRONGER</mutator>
+<!--						STRONGER		<mutator></mutator>-->
+								<mutator>ALL</mutator>
 								<!--<mutator></mutator>DEFAULTS-->
 							</mutators>
 <!--							<skipTests>${skipTests}</skipTests>-->
